<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/activity_sign_in_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/textView_height_title"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:text="@string/activity_sign_in_title"
        android:textAlignment="center"
        android:textSize="@dimen/textView_textSize_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/activity_sign_in_input_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editText_height"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/activity_sign_in_input_email_hint"
        android:inputType="textEmailAddress"
        android:padding="@dimen/editText_padding"
        android:singleLine="true"
        android:textAlignment="textStart"
        android:textSize="@dimen/editText_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_sign_in_title" />

    <EditText
        android:id="@+id/activity_sign_in_input_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editText_height"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/activity_sign_in_input_password_hint"
        android:inputType="textPassword"
        android:padding="@dimen/editText_padding"
        android:singleLine="true"
        android:textAlignment="textStart"
        android:textSize="@dimen/editText_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_sign_in_input_email" />

    <Button
        android:id="@+id/activity_sign_in_button_sign_in"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:padding="@dimen/button_padding"
        android:text="@string/activity_sign_in_button_sign_in"
        android:textAlignment="center"
        android:textSize="@dimen/button_textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_sign_in_input_password" />

    <Button
        android:id="@+id/activity_sign_in_button_sign_up"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:padding="@dimen/button_padding"
        android:text="@string/activity_sign_in_button_sign_up"
        android:textAlignment="center"
        android:textSize="@dimen/button_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_sign_in_input_password" />

</androidx.constraintlayout.widget.ConstraintLayout>