<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.Group
            android:id="@+id/fragment_settings_group"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:constraint_referenced_ids="fragment_settings_cardview_email,fragment_settings_cardview_passsword,fragment_settings_cardview_firstname,fragment_settings_cardview_lastname,fragment_settings_cardview_gender,fragment_settings_cardview_age" />

        <TextView
            android:id="@+id/fragment_settings_textview_group_top_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/fragment_settings_textview_group_top_title"
            android:textSize="@dimen/textView_textSize"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_settings_cardview_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/fragment_settings_textview_email_title"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textView_height_setting"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/fragment_settings_textview_email_title"
                    android:textColor="#000000"
                    android:textSize="@dimen/textView_textSize" />

                <TextView
                    android:id="@+id/fragment_settings_textview_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textView_height_setting"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="@dimen/textView_textSize" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_settings_cardview_passsword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/fragment_settings_textview_paswword_title"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textView_height_setting"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/fragment_settings_textview_paswword_title"
                    android:textColor="#000000"
                    android:textSize="@dimen/textView_textSize" />

                <TextView
                    android:id="@+id/fragment_settings_textview_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textView_height_setting"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="@dimen/textView_textSize" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/fragment_settings_textview_group_bottom_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/fragment_settings_textview_group_bottom_title"
            android:textSize="@dimen/textView_textSize"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_settings_cardview_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/fragment_settings_textview_firstname_title"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textView_height_setting"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/fragment_settings_textview_firstname_title"
                    android:textColor="#000000"
                    android:textSize="@dimen/textView_textSize" />

                <TextView
                    android:id="@+id/fragment_settings_textview_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textView_height_setting"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="@dimen/textView_textSize" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_settings_cardview_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/fragment_settings_textview_lastname_title"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textView_height_setting"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/fragment_settings_textview_lastname_title"
                    android:textColor="#000000"
                    android:textSize="@dimen/textView_textSize" />

                <TextView
                    android:id="@+id/fragment_settings_textview_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textView_height_setting"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="@dimen/textView_textSize" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_settings_cardview_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/fragment_settings_textview_gender_title"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textView_height_setting"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/fragment_settings_textview_gender_title"
                    android:textColor="#000000"
                    android:textSize="@dimen/textView_textSize" />

                <TextView
                    android:id="@+id/fragment_settings_textview_gender"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textView_height_setting"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="@dimen/textView_textSize" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_settings_cardview_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/fragment_settings_textview_age_title"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textView_height_setting"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/fragment_settings_textview_age_title"
                    android:textColor="#000000"
                    android:textSize="@dimen/textView_textSize" />

                <TextView
                    android:id="@+id/fragment_settings_textview_age"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textView_height_setting"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="@dimen/textView_textSize" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
